--- a/css/style.css
+++ b/css/style.css
@@ -368,19 +368,19 @@ Projects
 .cd-projects-previews a,
 .cd-projects .preview-image {
   /* set a background image for each project */
-  background: #5b927d url(../img/img-1.jpg) no-repeat center center;
+  background: #5b927d url(../img/img-1.png) no-repeat center center;
   background-size: cover;
 }
 
 .cd-projects-previews li:nth-of-type(2) a,
 .cd-projects > li:nth-of-type(2) .preview-image {
-  background: #a8ae7e url(../img/img-2.jpg) no-repeat center center;
+  background: #a8ae7e url(../img/img-2.png) no-repeat center center;
   background-size: cover;
 }
 
 .cd-projects-previews li:nth-of-type(3) a,
 .cd-projects > li:nth-of-type(3) .preview-image {
-  background: #e7d5a4 url(../img/img-3.jpg) no-repeat center center;
+  background: #e7d5a4 url(../img/img-3.png) no-repeat center center;
   background-size: cover;
 }
 
