changes to all files

--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,17 +1,16 @@
 // colors
 
-$color-1: #5b927d; // Patina
-$color-2: #a8ae7e; // Swamp Green
-$color-3: #e7d5a4; // Zombie
-$color-4: #835531; // Potters Clay
-$color-5: #262423; // Dune
-$color-6: #ffffff; // White
+$color-1: #2978A0; // Jelly Bean
+$color-2: #315659; // Spectra
+$color-3: #BCAB79; // Gimblet
+$color-4: #253031; // Outer Space
+$color-5: #FFFFFF; // White
 
 // fonts 
 
-$primary-font: 'PT Sans', sans-serif;
-$secondary-font: 'Merriweather', serif;
+$primary-font: sans-serif;
+$secondary-font: 'Playfair Display', serif;
 
-// Number of projects 
+//number of projects
 
-$items: 4;
+$items: 3;
