--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,8 +25,12 @@ body {
 		size: 1.6rem;
 		family: $primary-font; // variables inside partials > _variables.scss
 	}
-	color: $color-6;
-	background-color: $color-5;
+	color: $color-1;
+	background-color: $color-4;
+}
+
+html, body {
+	height: 100%;
 }
 
 a {
@@ -34,43 +38,55 @@ a {
 	text-decoration: none;
 }
 
-/* -------------------------------- 
-
-Patterns - reusable parts of our design
-
--------------------------------- */
-
-.cd-text-replace {
-	/* replace text with image */
-	color: transparent;
-	text-indent: 100%;
-	overflow: hidden;
-	white-space: nowrap;
+button {
+	border: none;
+	outline: none;
+	cursor: pointer;
 }
 
 /* -------------------------------- 
 
-Menu trigger
+ Header
 
 -------------------------------- */
 
-.cd-nav-trigger {
+.cd-logo, .cd-nav-trigger {
 	position: absolute;
-	z-index: 4;
+	z-index: 3;
+}
+
+.cd-logo {
+	top: 34px;
+	left: 5%;
+	@include transition(opacity .3s, visibility .3s);
+
+	&.project-open {
+		opacity: 0;
+		visibility: hidden;
+	}
+}
+
+.cd-nav-trigger {
 	top: 24px;
 	right: 5%;
-	height: 52px;
-	width: 52px;
+	height: 44px;
+	width: 44px;
 	border-radius: 50%;
-	background-color: rgba(#000, .8);
+	background-color: rgba(#000, .6);
 	@include transition(background .2s);
+	
+	/* image replacement */
+	overflow: hidden;
+	text-indent: 100%;
+	white-space: nowrap;
+	color: transparent;
 
 	.cd-icon, 
 	.cd-icon::before, 
 	.cd-icon::after {
-		/* menu icon created in CSS */
+		/* icon created in CSS */
 		position: absolute;
-		background-color: $color-6;
+		background-color: $color-5;
 		border-radius: 2px;
 
 		/* Force Hardware Acceleration in WebKit */
@@ -79,7 +95,7 @@ Menu trigger
 	}
 
 	.no-touch &:hover {
-		background-color: rgba(#000, 1);
+		background-color: rgba(#000, .8);
 	}
 
 	.cd-icon {
@@ -111,10 +127,10 @@ Menu trigger
 
 	&.project-open .cd-icon {
 		/* user selects a projects - transform the icon into a 'X' */
-		background-color: rgba($color-6, 0);
+		background-color: rgba($color-5, 0);
 
 		&::before, &::after {
-			background-color: rgba($color-6, 1);
+			background-color: rgba($color-5, 1);
 		}
 		
 		&::before {
@@ -126,368 +142,17 @@ Menu trigger
 		}
 	}
 
-	&.nav-visible .cd-icon {
+	&.nav-open .cd-icon {
 		/* user opens the navigation - transform the icon into an arrow */
-		@include transform(translateY(-50%) translateX(-50%));
+		@include transform(translateY(-50%) translateX(-50%) rotate(90deg));
 
 		&::after {
-			@include transform(translateX(5px) translateY(3px) rotate(-45deg) scaleX(.5));
+			@include transform(translateX(-5px) translateY(3px) rotate(45deg) scaleX(.5));
 		}
 
 		&::before {
-			@include transform(translateX(5px) translateY(-3px) rotate(45deg) scaleX(.5));
+			@include transform(translateX(-5px) translateY(-3px) rotate(-45deg) scaleX(.5));
 		}
-	}
-
-	@include MQ(M) {
-		&.nav-visible .cd-icon {
-			@include transform(translateY(-50%) translateX(-50%) rotate(-90deg));
-
-			&::after {
-				@include transform(translateX(-5px) translateY(3px) rotate(45deg) scaleX(.5));
-			}
-
-			&::before {
-				@include transform(translateX(-5px) translateY(-3px) rotate(-45deg) scaleX(.5));
-			}
-		}
-	}
-}
-
-/* -------------------------------- 
-
-Projects
-
--------------------------------- */
-
-.cd-projects-container {
-	position: relative;
-	z-index: 2;
-	overflow-x: hidden;
-
-	&.project-open {
-		/* smooth scroll on iOS devices */
-		-webkit-overflow-scrolling: touch;
-	}
-}
-
-.cd-projects-previews {
-	position: relative;
-	z-index: 2;
-	height: 100vh;
-	width: 100vw;
-	@include clearfix;
-
-	.project-open & {
-		pointer-events: none;
-	}
-
-	li {
-		height: 100%/$items;
-		width: 100%;
-		overflow: hidden;
-		@include transition(transform .5s);
-
-		/* Force Hardware Acceleration */
-		@include backface-visibility(hidden);
-		@include transform(translateZ(1px));
-
-		&.selected {
-			opacity: 0;
-			/* move selected project preview out of the viewport with no transition */
-			@include transform(translateX(-100%));
-			@include transition(transform 0s);
-		}
-
-		&.slide-out {
-			@include transform(translateX(-100%));
-		}
-	}
-
-	a {
-		display: block;
-		height: 100vh;
-		width: 100%;
-		/* fixes a bug on projects caption width */
-		@include transform(translateY(0%));
-		opacity: 0;
-		@include transition(opacity .5s);
-	}
-
-	li:nth-of-type(2) a {
-		@include transform(translateY(-100%/$items));
-	}
-
-	li:nth-of-type(3) a {
-		@include transform(translateY(-100%*2/$items));
-	}
-
-	li:nth-of-type(4) a {
-		@include transform(translateY(-100%*3/$items));
-	}
-
-	.bg-loaded a {
-		opacity: 1;
-	}
-
-	@include MQ(M) {
-
-		li {
-			display: inline-block;
-			height: 100%;
-			width: 100%/$items;
-			float: left;
-
-			&.selected {
-				@include transform(translateY(-100%));
-			}
-
-			&.slide-out {
-				@include transform(translateY(-100%));
-			}
-		}
-
-		a {
-			/* width equal to window width */
-			width: 100%*$items;
-		}
-
-		li:nth-of-type(2) a {
-			@include transform(translateX(-100%/$items));
-		}
-
-		li:nth-of-type(3) a {
-			@include transform(translateX(-100%*2/$items));
-		}
-
-		li:nth-of-type(4) a {
-			@include transform(translateX(-100%*3/$items));
-		}
-	}
-}
-
-.cd-projects {
-	position: absolute;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	height: 100vh;
-	width: 100vw;
-
-	> li {
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		opacity: 0;
-		@include transition(opacity .3s);
-
-		&.selected {
-			z-index: 1;
-			opacity: 1;
-			@include transition(opacity 0s);
-		}
-	}
-
-	.preview-image {
-		display: block;
-		height: 100vh;
-	}
-}
-
-.cd-projects-previews a, 
-.cd-projects .preview-image {
-	/* set a background image for each project */
-	background: $color-1 url(../img/img-1.jpg) no-repeat center center;
-	background-size: cover;
-}
-
-.cd-projects-previews li:nth-of-type(2) a, 
-.cd-projects > li:nth-of-type(2) .preview-image {
-	background: $color-2 url(../img/img-2.jpg) no-repeat center center;
-	background-size: cover;
-}
-
-.cd-projects-previews li:nth-of-type(3) a, 
-.cd-projects > li:nth-of-type(3) .preview-image {
-	background: $color-3 url(../img/img-3.jpg) no-repeat center center;
-	background-size: cover;
-}
-
-.cd-projects-previews li:nth-of-type(4) a, 
-.cd-projects > li:nth-of-type(4) .preview-image {
-	background: $color-4 url(../img/img-4.jpg) no-repeat center center;
-	background-size: cover;
-}
-
-.cd-project-title {
-	position: absolute;
-	width: 100%;
-	top: calc(50% - 20px);
-	left: 0;
-	color: $color-6;
-	@include transform(translateY(100vh*(2/$items - $items/2)/$items));
-	@include transition(transform .6s .2s);
-	text-align: center;
-	@include font-smoothing;
-
-	&::after {
-		/* line below project title */
-		content: '';
-		position: absolute;
-		left: 50%;
-		bottom: -10px;
-		width: 40px;
-		height: 1px;
-		background: $color-6;
-
-		@include transform(translateX(-50%) scale(0));
-		@include transition(transform .3s);
-	}
-
-	.no-touch .cd-projects-previews a:hover &::after {
-		@include transform(translateX(-50%) scale(1));
-	}
-
-	.cd-projects &::after {
-		@include transform(translateX(-50%) scale(1));
-		@include transition(transform .3s .3s);
-	}
-
-	h2 {
-		font-size: 2.5rem;
-		line-height: 1.5; 
-		font-weight: 700;
-	}
-
-	p {
-		font-size: 1.4rem;
-		font-family: $secondary-font;
-		font-style: italic;
-		line-height: 1.2;
-		padding: .4em 2em;
-		opacity: .8;
-	}
-
-	@include MQ(M) {
-		width: 100%/$items;
-		top: 50vh;
-		@include transform(translateX(0%));
-	}
-}
-
-.cd-projects-previews li:nth-of-type(2) .cd-project-title, 
-.cd-projects > li:nth-of-type(2) .cd-project-title {
-	@include transform(translateY(100vh*(2/$items - $items/2 + 1)/$items));
-
-	@include MQ(M) {
-		@include transform(translateX(100%));
-	}
-}
-
-.cd-projects-previews li:nth-of-type(3) .cd-project-title, 
-.cd-projects > li:nth-of-type(3) .cd-project-title  {
-	@include transform(translateY(100vh*(2/$items - $items/2 + 2)/$items));
-
-	@include MQ(M) {
-		@include transform(translateX(200%));
-	}
-}
-
-.cd-projects-previews li:nth-of-type(4) a .cd-project-title, 
-.cd-projects > li:nth-of-type(4) .cd-project-title  {
-	@include transform(translateY(100vh*(2/$items - $items/2 + 3)/$items));
-
-	@include MQ(M) {
-		@include transform(translateX(300%));
-	}
-}
-
-li.selected .cd-project-title,
-.cd-projects > li:nth-of-type(2).selected .cd-project-title,
-.cd-projects > li:nth-of-type(3).selected .cd-project-title,
-.cd-projects > li:nth-of-type(4).selected .cd-project-title {
-	@include transform(translateY(0));
-
-	@include MQ(M) {
-		@include transform(translateX(150%));
-	}
-}
-
-.cd-projects li.selected .cd-project-title::after {
-	@include transition(transform .3s 0s);
-	@include transform(translateX(-50%) scale(0));
-}
-
-.touch .cd-projects li.selected .cd-project-title::after {
-	@include transition(transform 0s);
-}
-
-.cd-project-info {
-	display: none;
-	padding: 4em 0;
-	background-color: $color-6;
-	color: tint($color-5, 40%);
-
-	.content-visible & {
-		display: block;
-	}
-
-	p {
-		width: 90%;
-		max-width: 800px;
-		margin: 0 auto;
-		line-height: 2;
-	}
-}
-
-.cd-projects-container .scroll {
-	display: block;
-	position: absolute;
-	z-index: 2;
-	bottom: 30px;
-	left: 50%;
-	width: 44px;
-	height: 44px;
-
-	/* rest button default style */
-	cursor: pointer;
-	border: none;
-
-	&:focus {
-		outline: none;
-	}
-
-	background: url('../img/cd-icon-arrow.svg') no-repeat center center;
-	visibility: hidden;
-	@include transform(translateX(-50%) scale(0));
-	@include transition(transform .3s 0s, visibility 0s .3s);
-}
-
-.cd-projects-container.project-open .scroll {
-	visibility: visible;
-	@include transform(translateX(-50%) scale(1));
-	@include transition(transform 0.4s 0s, visibility 0s 0s);
-	@include animation(cd-translate 1.2s 0.8s);
-	@include animation-iteration-count(2);
-}
-
-.no-touch .cd-projects-container.project-open .scroll:hover {
-	@include transform(translateX(-50%) scale(1.2));
-}
-
-@include keyframes(cd-translate) {
-	0% {
-		@include transform(translateX(-50%) scale(1));
-	}
-
-	50% {
-		@include transform(translateY(10px) translateX(-50%) scale(1));
-	}
-
-	100% {
-		@include transform(translateX(-50%) scale(1));
 	}
 }
 
@@ -502,12 +167,14 @@ li.selected .cd-project-title,
 	z-index: 1;
 	top: 0;
 	left: 0;
-	height: 100%;
+	/* height = (100% - 9%) - 9% is the space taken by the projects when the navigation is open */
+	height: 91%;
 	width: 100%;
 	overflow: auto;
 	text-align: center;
 	opacity: 0;
-	@include transition(opacity .6s);
+	@include transition(opacity 0s .4s);
+
 	/* vertically align its content */
 	display: table;
 
@@ -515,6 +182,8 @@ li.selected .cd-project-title,
 		/* vertically align inside nav */
 		display: table-cell;
 		vertical-align: middle;
+		@include transform(translateY(50px));
+		@include transition(transform .4s);
 	}
 
 	a {
@@ -523,14 +192,14 @@ li.selected .cd-project-title,
 		border-radius: 4px;
 		@include transition(background .2s);
 
-		color: $color-6;
+		color: $color-5;
 		font-family: $secondary-font;
 		font-size: 2.4rem;
 		font-weight: 700;
 		@include font-smoothing;
 
 		.no-touch &:hover {
-			background-color: $color-2;
+			background-color: lighten($color-4, 5%);
 		}
 	}
 
@@ -538,7 +207,7 @@ li.selected .cd-project-title,
 		position: relative;
 		margin: 2.4em 0 2em;
 
-		color: $color-2;
+		color: lighten($color-4, 20%);
 		text-transform: uppercase;
 		font-weight: 700;
 		font-size: 1.2rem;
@@ -556,16 +225,13 @@ li.selected .cd-project-title,
 		}
 	}
 
-	&.nav-visible {
+	&.nav-open {
 		opacity: 1;
-	}
+		@include transition(opacity 0s);
 
-	&.nav-clickable {
-		z-index: 3;
-	}
-
-	.no-csstransitions &.nav-visible {
-		z-index: 3;
+		ul {
+			@include transform(translateY(0));
+		}
 	}
 
 	@include MQ(L) {
@@ -578,23 +244,368 @@ li.selected .cd-project-title,
 
 /* -------------------------------- 
 
-JavaScript Disabled
+ Projects
 
 -------------------------------- */
 
+.cd-projects-container {
+	height: 100%;
+	width: 100vw;
+	position: relative;
+	overflow: hidden;
+
+	.single-project {
+		position: absolute;
+		z-index: 2;
+		top: 0px;
+		left: 0px;
+		height: 100%;
+		width: 100%;
+		cursor: pointer;
+		@include transition(transform .4s);
+
+		/* Force hardware acceleration */
+		@include backface-visibility(hidden);
+		@include transform(translateZ(0));
+
+		&:nth-of-type(2) {
+			@include transform(translateY(100%/$items));
+		}
+
+		&:nth-of-type(3) {
+			@include transform(translateY(100%*2/$items));
+		}
+
+		&.selected {
+			/* selected project */
+			cursor: auto;
+			@include transform(translateY(0));
+		}
+
+		&.selected ~ li {
+			/* hide siblings projects */
+			@include transform(translateY(100%));
+		}
+	}
+
+	&.nav-open .single-project {
+		box-shadow: 0 0 30px rgba(#000, .5);
+		@include transform(translateY(91%));
+
+		&:nth-of-type(2) {
+			@include transform(translateY(94%));
+		}
+
+		&:nth-of-type(3) {
+			@include transform(translateY(97%));
+		}
+	}
+
+	&.nav-open:hover .single-project {
+		@include transform(translateY(88%));
+
+		&:nth-of-type(2) {
+			@include transform(translateY(92%));
+		}
+
+		&:nth-of-type(3) {
+			@include transform(translateY(96%));
+		}
+	}
+}
+
+.cd-title {
+	position: relative;
+	z-index: 1;
+    height: 100%/$items;
+    width: 100vw;
+    text-align: center;
+    /* vertical align its content */
+    display: table;
+
+    &::before {
+    	/* background image */
+    	content: '';
+    	position: absolute;
+    	top: 0;
+    	left: 0;
+    	height: 300%;
+    	width: 100%;
+    	background-position: center center;
+    	background-repeat: no-repeat; 
+    }
+
+    &::after {
+		/* line below title -  visible on hover */
+		content: '';
+		position: absolute;
+		left: 50%;
+	    top: calc(50% + 30px);
+	    @include transform(translateX(-50%) translateY(-50%) scaleX(0));
+	    height: 1px;
+	    width: 60px;
+	    background-color: $color-5;
+	    @include transition(transform .2s);
+	}
+
+    .single-project:nth-of-type(1) & {
+    	background-color: $color-1;
+
+    	&::before {
+    		background-image: url(../img/img-1.jpg);
+    	}
+    }
+
+    .single-project:nth-of-type(2) & {
+    	background-color: $color-2;
+
+    	&::before {
+    		background-image: url(../img/img-2.jpg);
+    	}
+    }
+
+    .single-project:nth-of-type(3) & {
+    	background-color: $color-3;
+
+    	&::before {
+    		background-image: url(../img/img-3.jpg);
+    	}
+    }
+
+    .single-project:nth-of-type(1) &::before, 
+    .single-project:nth-of-type(2) &::before, 
+    .single-project:nth-of-type(3) &::before {
+    	background-size: cover;
+    } 
+
+	h2 {
+		position: relative;
+		z-index: 1;
+		font-size: 2.5rem;
+		font-weight: 700;
+		color: $color-5;
+		font-family: $secondary-font;
+
+		/* vertical align inside .cd-title */
+		display: table-cell;
+		vertical-align: middle;
+		
+		@include transition(transform .4s);
+
+		/* Force hardware acceleration */
+		@include backface-visibility(hidden);
+		@include transform(translateZ(0));
+	}
+
+	.no-touch &:hover::after {
+		@include transform(translateX(-50%) translateY(-50%) scaleX(1));
+	}
+
+	.no-touch .selected &:hover::after {
+		@include transition(transform 0s);
+		@include transform(translateX(-50%) translateY(-50%) scaleX(0));
+	}
+
+	.selected & h2 {
+		/* vertically center h2 in the full-height image*/ 
+		@include transform(translateY( -150%*(1 - $items)/$items ));
+    }
+
+	@include MQ(L) {
+
+		h2 {
+			font-size: 3.6rem;
+		}
+	}
+}
+
+.cd-project-info {
+	position: absolute;
+	z-index: 2;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	opacity: 0;
+	visibility: hidden;
+	@include transition(opacity .4s, visibility .4s);
+
+	&::before {
+		/* use to push the .content-wrapper below the intro project image */
+		content: '';
+		display: block;
+		height: 100%;
+		width: 100%;
+		pointer-events: none;
+	}
+
+	.content-wrapper {
+		position: relative;
+		z-index: 2;
+		padding: 2em 0 3em;
+		background-color: $color-5;
+	}
+
+	.content-wrapper > * {
+		width: 90%;
+		max-width: 800px;
+		margin: 0 auto;
+		color: $color-4;
+	}
+
+	.content-wrapper p {
+		margin-bottom: 2em;
+		line-height: 2;
+	}
+
+	.selected & {
+		-webkit-overflow-scrolling: touch;
+		opacity: 1;
+		visibility: visible;
+		@include transition(opacity 0s, visibility 0s);
+	}
+
+	&.has-boxshadow .content-wrapper {
+		/* add a box-shadow while scrolling over the background image */
+		box-shadow: 0 -5px 30px rgba(#000, .2);
+	}
+
+	@include MQ(L) {
+		.content-wrapper {
+			padding: 4em 0;
+		}
+
+		.content-wrapper p {
+			font-size: 1.8rem
+		}
+	}
+}
+
+.cd-scroll {
+	/* scroll down arrow */
+	position: fixed;
+	z-index: 1;
+	top: calc(100% - 100px);
+	@include center(x);
+	height: 48px;
+	width: 48px;
+
+	/* replace text with image */
+	text-indent: 100%;
+	overflow: hidden;
+	white-space: nowrap;
+	color: transparent;
+	background: transparent url(../img/cd-arrow.svg) no-repeat center center;
+
+	opacity: 0;
+	visibility: hidden;
+	@include transition(opacity .4s, visibility .4s);
+
+	.project-open & {
+		opacity: 1;
+		visibility: visible;
+		@include animation(cd-translate 1.2s 0.4s);
+		@include animation-iteration-count(2);
+	}
+
+	.project-open .has-boxshadow & {
+		opacity: 0;
+		visibility: hidden;
+	} 
+}
+
+@include keyframes(cd-translate) {
+	0% {
+		@include transform(translateX(-50%));
+	}
+
+	50% {
+		@include transform(translateY(10px) translateX(-50%));
+	}
+
+	100% {
+		@include transform(translateX(-50%));
+	}
+}
+
+/* -------------------------------- 
+
+ Support for no js 
+
+-------------------------------- */
+
+.no-js .cd-nav-trigger, .no-js .cd-scroll {
+	display: none;
+}
+
 .no-js .cd-primary-nav {
+	position: relative;
+	height: auto;
+	min-height: 94px;
 	display: block;
-	position: static;
+	@include clearfix;
 	opacity: 1;
-	margin-bottom: 1.5em;
 
 	ul {
 		display: block;
+		padding-left: calc(5% + 60px);
 		@include clearfix;
-		padding: 0 5%;
+		float: right;
+		@include transform(translateY(0));
 	}
 
-	li:not(.cd-label) {
+	li {
 		display: inline-block;
+		float: left;
+		margin-top: 1.4em;
+
+		&.cd-label {
+			display: none;
+		}
+	}
+
+	a {
+		font-size: 1.6em;
+	}
+}
+
+.no-js .cd-projects-container {
+	height: auto;
+
+	.single-project {
+		position: relative;
+		@include transform(translateY(0));
+		top: 0;
+		cursor: auto;
+	}
+
+	.cd-title {
+		height: 300px;
+
+		&::before {
+			height: 300px;
+		}
+	}
+
+	h2 {
+		@include transform(translateY(0));
+	}
+
+	h2::after {
+		display: none;
+	}
+}
+
+.no-js .cd-project-info {
+	position: relative;
+	height: auto;
+	top: 0;
+	@include transform(translateY(0));
+	opacity: 1;
+	visibility: visible;
+
+	.content-wrapper {
+		margin-top: 0;
 	}
 }
