--- a/css/style.css
+++ b/css/style.css
@@ -427,13 +427,13 @@ button {
   background-color: #315659;
 }
 .single-project:nth-of-type(2) .cd-title::before {
-  background-image: url(../img/img-2.png);
+  background-image: url(../img/img-2.jpg);
 }
 .single-project:nth-of-type(3) .cd-title {
   background-color: #BCAB79;
 }
 .single-project:nth-of-type(3) .cd-title::before {
-  background-image: url(../img/img-3.png);
+  background-image: url(../img/img-3.jpg);
 }
 .single-project:nth-of-type(1) .cd-title::before, .single-project:nth-of-type(2) .cd-title::before, .single-project:nth-of-type(3) .cd-title::before {
   background-size: cover;
@@ -444,6 +444,8 @@ button {
   font-size: 50px;
   font-weight: 700;
   color: #ffffff;
+  text-shadow: 2px 2px black;
+  text
   font-family: "Playfair Display", serif;
   /* vertical align inside .cd-title */
   display: table-cell;
