--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ button {
   height: 44px;
   width: 44px;
   border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: #ffffff;
   -webkit-transition: background 0.2s;
   -moz-transition: background 0.2s;
   transition: background 0.2s;
@@ -135,10 +135,10 @@ button {
 }
 .cd-nav-trigger.project-open .cd-icon {
   /* user selects a projects - transform the icon into a 'X' */
-  background-color: #ffffff(255, 255, 255, 0);
+  background-color: #ffffff;
 }
 .cd-nav-trigger.project-open .cd-icon::before, .cd-nav-trigger.project-open .cd-icon::after {
-  background-color: black;
+  background-color: #ffffff;
 }
 .cd-nav-trigger.project-open .cd-icon::before {
   -webkit-transform: translateY(0) rotate(45deg);
@@ -445,7 +445,6 @@ button {
   font-weight: 700;
   color: #ffffff;
   text-shadow: 2px 2px black;
-  text
   font-family: "Playfair Display", serif;
   /* vertical align inside .cd-title */
   display: table-cell;
